--- a/personalpf.html
+++ b/personalpf.html
@@ -128,6 +128,7 @@
           <div class="contact-section-header">
             <h2>Let's work together...</h2>
             <p>How do you take your coffee?</p>
+              Dark and Bitter.
           </div>
            <div class="contact-links">
 
